# LearnBlockChain

./: CMakeLists.txt  README.md  main.cpp
Block/: Block.cpp  Block.h
BlockChain/: Blockchain.cpp  Blockchain.h
POW/: ProofOfWork.cpp  ProofOfWork.h
Utils/: BigInt.cpp  BigInt.h  hex2bigint.cpp  hex2bigint.h
